--- a/app.json
+++ b/app.json
@@ -1,8 +1,8 @@
 {
-  "name": "Caffe Studio Design Lab webpages on Heroku",
-  "description": "A barebones Node.js app using Express 4",
+  "name": "Caffe Studio Design Lab",
+  "description": "Experimental web contents by Caffe Studio Design Lab",
   "repository": "https://github.com/alessdelo/caffestudiodesignlab",
   "logo": "https://cdn.rawgit.com/heroku/node-js-getting-started/master/public/node.svg",
-  "keywords": ["node", "express", "heroku"],
+  "keywords": ["design", "contract", "restaurants"],
   "image": "heroku/nodejs"
 }
