--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
   },
   "main": "index.js",
   "scripts": {
-    "start": "node index.js",
-    "test": "node index.js"
+    "start": "node index.js"
   },
   "dependencies": {
     "ejs": "^2.5.6",
