--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "Caffe Studio Design Lab",
   "version": "0.0.0",
-  "description": "first Studio Design Lab App",
+  "description": "first Caffe Studio Design Lab App",
   "engines": {
     "node": "8.9.1"
   },
