--- a/package.json
+++ b/package.json
@@ -2,35 +2,21 @@
   "name": "Caffe Studio Design Lab",
   "version": "1.0.0",
   "description": "Caffe Studio Design Lab App",
-  "engines": {
-    "node": "8.9.1"
-  },
   "main": "index.js",
+  "author": "",
+  "license": "ISC",
+  "engines": {
+      "node": "8.9.2"
+  },
   "scripts": {
-    "start": "node index.js"
+    "start": "node helloworld.js"
   },
   "dependencies": {
-    "ejs": "^2.5.6",
-    "express": "^4.15.2",
-    "mongodb": "^3.0.5",
-    "mongoose": "^5.0.11",
-    "body-parser": "^1.18.2",
-    "ol": "^4.6.5",
-    "three":"^0.94.0"
-  },
-  "devDependencies": {
-    "request": "^2.81.0",
-    "tape": "^4.7.0"
-  },
+    "express": "^4.15.2"
+  }
+ }
 
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/alessdelo/caffestudiodesignlab"
-  },
-  "keywords": [
-    "design",
-    "interior",
-    "restaurants"
-  ],
-  "license": "MIT"
-}
+
+
+
+
