--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
       "node": "8.9.2"
   },
   "scripts": {
-    "start": "node helloworld.js"
+    "start": "node index.js"
   },
   "dependencies": {
     "express": "^4.15.2"
