--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "start": "node index.js"
   },
   "dependencies": {
-    "express": "^4.16.3"
+    "express": "^4.16.3",
+    "body-parser":"*"
   }
  }
 
