--- a/package.json
+++ b/package.json
@@ -1,6 +1,31 @@
 {
   "name": "Caffe Studio Design Lab",
   "version": "1.0.0",
+  "description": "basic app made only online using a mobile phone",
+  "main": "index1.js",
+  "author": "",
+  "license": "ISC",
+  "engines": {
+      "node": "8.9.2",
+      "npm": "5.7.1"
+  },
+  "scripts": {
+    "start": "node index1.js"
+  },
+  "dependencies": {
+    "ejs": "^2.5.7",
+    "express": "^4.15.2",
+    "path": "^0.12.7"
+  }
+ }
+
+
+
+
+
+{
+  "name": "Caffe Studio Design Lab",
+  "version": "1.0.0",
   "description": "Caffe Studio Design Lab App",
   "main": "index.js",
   "author": "",
