--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "Caffe Studio Design Lab",
   "version": "1.0.0",
-  "description": "basic app made only online using a mobile phone",
+  "description": "Caffe Studio Design Lab App ",
   "main": "index1.js",
   "author": "",
   "license": "ISC",
