--- a/package.json
+++ b/package.json
@@ -1,38 +1,23 @@
 {
   "name": "Caffe Studio Design Lab",
   "version": "1.0.0",
-  "description": "first Caffe Studio Design Lab App",
-  "engines": {
-    "node": "8.9.1"
-  },
+  "description": "Caffe Studio Design Lab App ",
   "main": "index.js",
+  "author": "",
+  "license": "ISC",
+  "engines": {
+      "node": "8.9.2",
+      "npm": "5.7.1"
+  },
   "scripts": {
     "start": "node index.js"
   },
   "dependencies": {
-    "ejs": "^2.5.6",
+    "ejs": "^2.5.7",
     "express": "^4.15.2",
-    "mongodb": "^3.0.5",
-    "mongoose": "^5.0.11",
-    "body-parser": "^1.18.2",
-    "ol": "^4.6.5",
-    "three":"^0.94.0"
-  },
-  "devDependencies": {
-    "request": "^2.81.0",
-    "tape": "^4.7.0"
-  },
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/alessdelo/caffestudiodesignlab.git"
-  },
-  "keywords": [
-    "design",
-    "interior",
-    "restaurants"
-  ],
-  "license": "MIT"
-}
+    "path": "^0.12.7"
+  }
+ }
 
 
 
