--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
   "author": "",
   "license": "ISC",
   "engines": {
-      "node": "8.9.2",
-    
+      "node": "8.9.2",   
       "npm": "5.7.1"
   },
   "scripts": {
@@ -16,7 +15,8 @@
   "dependencies": {
     "ejs": "^2.5.7",
     "express": "^4.15.2",
-    "path": "^0.12.7"
+    "path": "^0.12.7",
+    "mongodb": "^3.0.5"
   }
  }
 
