--- a/package.json
+++ b/package.json
@@ -16,7 +16,11 @@
     "ejs": "^2.5.7",
     "express": "^4.15.2",
     "path": "^0.12.7",
-    "mongodb": "^3.0.5"
+    "mongodb": "^3.0.5",
+    "mongoose": "^5.0.11",
+    "body-parser": "^1.18.2",
+    "ol": "^4.6.5",
+    "three":"^0.94.0"
   }
  }
 
