--- a/package.json
+++ b/package.json
@@ -21,6 +21,10 @@
     "body-parser": "^1.18.2",
     "ol": "^4.6.5",
     "three":"^0.94.0"
+  },
+  "devDependencies": {
+    "request": "^2.81.0",
+    "tape": "^4.7.0"
   }
  }
 
