--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "author": "",
   "license": "ISC",
   "engines": {
-      "node": "8.9.1",   
-      "npm": "5.7.1"
+      "node": "8.9.1"   
+    
   },
   "scripts": {
     "start": "node index.js"
