--- a/package.json
+++ b/package.json
@@ -6,16 +6,14 @@
   "author": "",
   "license": "ISC",
   "engines": {
-      "node": "8.9.2",
-      "npm": "5.7.1"
+    "node": "8.9.1"
   },
   "scripts": {
     "start": "node index.js"
   },
   "dependencies": {
-    "ejs": "^2.5.7",
+    "ejs": "^2.5.6",
     "express": "^4.15.2",
-    "path": "^0.12.7",
     "mongodb": "^3.0.5",
     "mongoose": "^5.0.11",
     "body-parser": "^1.18.2",
