--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "author": "",
   "engines": {
-    "node": "8.9.1"
+      "node": "8.9.2",    
+      "npm": "5.7.1"
   },
   "main": "index.js",
   "scripts": {
