--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "author": "",
   "engines": {
       "node": "8.9.2",    
-      "npm": "5.7.1"
+      "npm": "5.7.x"
   },
   "main": "index.js",
   "scripts": {
