--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
   "main": "index.js",
   "author": "",
   "engines": {
-      "node": "8.9.2",    
-      "npm": "5.7.x"
+      "node": "8.9.x"    
   },
   "main": "index.js",
   "scripts": {
