--- a/package.json
+++ b/package.json
@@ -13,16 +13,7 @@
   },
   "dependencies": {
     "ejs": "^2.5.6",
-    "express": "^4.15.2",
-    "mongodb": "^3.0.5",
-    "mongoose": "^5.0.11",
-    "body-parser": "^1.18.2",
-    "ol": "^4.6.5",
-    "three":"^0.94.0"
-  },
-  "devDependencies": {
-    "request": "^2.81.0",
-    "tape": "^4.7.0"
+    "express": "^4.15.2"
   },
   "repository": {
     "type": "git",
