--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "author": "",
   "engines": {
-      "node": "8.9.x"    
+      "node": "8.9.4"    
   },
   "main": "index.js",
   "scripts": {
