--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "author": "",
   "engines": {
-      "node": "8.9.4"    
+      "node": "8.9.x",
+      "npm": "5.7.x"
   },
   "main": "index.js",
   "scripts": {
